Fix indicators alignment issue

--- a/covid-local-gatsby/src/components/Guide/Guide.module.scss
+++ b/covid-local-gatsby/src/components/Guide/Guide.module.scss
@@ -24,6 +24,7 @@
 
   header {
     text-align: left;
+    margin: 0;
 
     .number {
       font-size: 1.3rem;
